# maelstrom-core

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-please.yml  rust.yml
src/: cmd_bam_collect_doc.rs  common.rs  err.rs  main.rs
src/cmd_bam_collect_doc/: aggregation.rs  reference.rs
src/common/: .doc.rs.swp  bam.rs  bcf.rs  doc.rs
src/tests/data/bam-collect-doc-1/: ex.expected.coverage.vcf  ex.expected.fragments.vcf
