[package]
name = "maelstrom-core"
version = "0.1.0"
authors = [
    "Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>",
]
description = "Tools for processing of NGS data"
repository = "https://github.com/bihealth/maelstrom-core"
documentation = "https://maelstrom-core.readthedocs.io"
readme = "README.md"
license = "MIT"
edition = "2021"
include = [
    "src/**/*.rs",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[package.metadata.release]
pre-release-commit-message = "release version {{version}}"
tag-message = "Version {{version}} of maelstrom-core."

[dependencies]
anyhow = "1"
bio = "0.42"
bio-types = "0.13"
rust-htslib = "0.39"
chrono = "0.4"
clap = { version = "3.2", features=["derive"] }
clap-verbosity-flag = "1"
console = "0.15"
enum-utils = "0.1"
file_diff = "1"
indicatif = "0.17"
itertools = "0.10"
separator = "0.4"
tempdir = "0.3"
tempfile = "3.3"
thiserror = "1"
matches = "0.1"
regex = "1.6"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "maelstrom-core"
path = "src/main.rs"
